getFirst() -> get(0)