@@ -39,7 +39,7 @@ public class QueryStringErrorTests extends ErrorsForCasesWithoutExamplesTestCase
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new QueryString(source, args.getFirst(), args.size() > 1 ? args.get(1) : null);
+        return new QueryString(source, args.get(0), args.size() > 1 ? args.get(1) : null);
     }
 
     @Override
